# My-RAG-Agent-System

./: .gitignore  Cargo.toml  README.md  TASK_TRACKER.md  additional_settings.md  agent_healer.py  benchmark_results.md  deploy_listener.py  dify_search.py  docker-compose.yml  dummy_target.py  litellm_config.yaml  mcp_config.json  mcp_server.py  ragy  sync_docs.py
.lissue/: config.yaml
.lissue/tasks/: .gitattributes
docs/: dify_search_optimization_guide.md  dify_workflow_agentic_rag.yml  indexing_config.json.example  sync_config.json.example
docs/project_a/: test.md  test2.md
guides/: 01_getting_started.md  02_development_workflow.md  03_engineering_hacks.md  aider_setup_guide.md  auto_fix_workflow.md  build_requirements.md  dify_setup_guide.md  ollama_setup_guide.md  system_requirements.md  task_ragy_init.md
scripts/: agent_healer.py  benchmark_rag.py  deploy_listener.py  dify_search.py  document_parser.py  evaluate_rag.py  log_cleanup.sh  mcp_server.py  ragy_core.sh  sync_docs.py  sync_status.py  utils.py  worker.py
src/: cli.rs  main.rs
src/tui/: api.rs  app.rs  app_tests.rs  mod.rs  ui.rs
templates/: aider.conf.yml  continue_config.json
tests/: evaluation_dataset.json  run_accuracy_benchmark.py  run_hf_benchmark.py  test_agentic_rag.py  test_context_optimization.py  test_document_parser.py  test_hyde.py  test_phase3.py  test_phase4.py  test_phase5.py  test_prompt_optimizer.py  test_query_rewriter.py  test_rag_evaluation_integration.py  test_semantic_cache_opt.py  test_sync_parallel_purge.py  test_system.py  test_worker.py  test_worker_parallel.py
(+19 files in other folders)
