[package]
name = "ragy"
version = "2.0.0"
edition = "2021"

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
chrono = "0.4.31"
reqwest = { version = "0.11.23", features = ["json"] }
dotenvy = "0.15.7"
